--- a/WebContent/index0.html
+++ b/WebContent/index0.html
@@ -50,7 +50,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="testboard.html">게시판1</a></li>
+            <li><a href="testboard.jsp">게시판1</a></li>
             <li><a href="#contact">게시판2</a></li>
             <li><a href="#contact">게시판3</a></li>
             <li><a href="#contact">게시판4</a></li>
