--- a/WebContent/maxing/index.html
+++ b/WebContent/maxing/index.html
@@ -27,12 +27,13 @@
 								<a href="index.html" id="logo">WebDongSaNy</a>
 							</h1>
 							<nav id="nav">
-								<a href="index.html" class="current-page-item">Homepage</a> <a
-									href="twocolumn1.html">Two Column #1</a> <a
-									href="twocolumn2.html">Two Column #2</a> <a
-									href="onecolumn.html">One Column</a> 
-									<a href="threecolumn.html">ThreeColumn</a>
-									<a href="signin.jsp">Login</a>
+                                <a href="index.html" class="current-page-item">홈</a>
+                                <a
+									href="twocolumn1.html">통합검색</a> <a
+									href="twocolumn2.html">유튜브</a> <a
+									href="onecolumn.html">커뮤니티</a> 
+									<a href="threecolumn.html">랭킹</a>
+									<a href="signin.jsp">로그인</a>
 							</nav>
 							
 						</header>
@@ -50,7 +51,7 @@
 					<div class="flipInX animated">
 						<h2>환영합니다</h2>
 					</div>
-					<script type="text/javascript">
+					<script type="text/javascript"> 
 						setTimeout(
 								function() {
 									document.getElementById("exp").innerHTML = "<div class=\"zoomIn animated\"><span>검색, 커뮤니티, 랭킹, 유튜브 추천서비스를 제공합니다.<br><br><h3>★☆★에이플 주세요☆★☆</h3></span></div>"
@@ -66,19 +67,14 @@
 			<div class="container">
 				<div class="row main-row">
 					<div class="col-4 col-12-medium">
-
 						<section>
-							<h2>어디 구글부터 해볼까?</h2>
-							<p>구글 어디있어?</p>
-							<footer class="controls">
-								<a href="http://google.co.kr" target="_blank" class="button">Google
-									Korea</a>
-							</footer>
+							<h2>통합검색</h2>
+                            <div class="search"><input type="text" name="keyword" value="">                            
+                            <a href="http://google.co.kr" button type="submit" target="_blank" class="button">검색</a>
+                            </div>
 						</section>
-
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
-
 						<section>
 							<h2>인기 유튜브 보자</h2>
 							<ul class="small-large-list">
