--- a/WebContent/maxing/index.html
+++ b/WebContent/maxing/index.html
@@ -12,31 +12,28 @@
 	content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
 <link rel="stylesheet" href="assets/css/animate.css">
+<link rel="stylesheet" href="assets/css/custom.css">
 </head>
 <body>
 	<div id="page-wrapper">
-
 		<!-- Header -->
 		<div id="header-wrapper">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-
 						<header id="header">
 							<h1>
 								<a href="index.html" id="logo">WebDongSaNy</a>
 							</h1>
-							<nav id="nav">
-								<a href="index.html" class="current-page-item">Homepage</a> <a
-									href="twocolumn1.html">Two Column #1</a> <a
-									href="twocolumn2.html">Two Column #2</a> <a
-									href="onecolumn.html">One Column</a> 
-									<a href="threecolumn.html">ThreeColumn</a>
-									<a href="signin.jsp">Login</a>
-							</nav>
-							
+                                    <nav id="nav">
+                                        <a href="index.html" class="current-page-item">홈</a>
+                                        <a href="total_search.html">통합검색</a>
+                                        <a href="youtube_rcmd.html">유튜브 추천</a>
+                                        <a href="community.html">커뮤니티</a>
+                                        <a href="ranking.html">랭킹</a>
+                                        <a href="signin.jsp">로그인</a>
+                                    </nav>
 						</header>
-
 					</div>
 				</div>
 			</div>
@@ -68,14 +65,20 @@
 					<div class="col-4 col-12-medium">
 
 						<section>
-							<h2>어디 구글부터 해볼까?</h2>
-							<p>구글 어디있어?</p>
-							<footer class="controls">
-								<a href="http://google.co.kr" target="_blank" class="button">Google
-									Korea</a>
-							</footer>
-						</section>
-
+							<h2>검색</h2>
+							<form name=form1 action="https://www.google.co.kr/search?" target="_blank" method=get>
+                                <input class="input" type="text" name="query" value="" placeholder="Google Search">
+                                <button class="button-google">　　　　</button>
+                            </form>
+                            <form name=form1 action="https://search.naver.com/search.naver?" target="_blank" method=get>
+                                <input class="input" type="text" name="query" value="" placeholder="Naver Search">
+                                <button class="button-naver">　　　　</button>
+                            </form>
+                            <form name=form1 action="https://search.daum.net/search?" target="_blank" method=get>
+                                <input class="input" type="text" name="q" value="" placeholder="Daum Search">
+                                <button class="button-daum">　　　</button>
+                            </form>
+                        </section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 
@@ -101,25 +104,25 @@
 					<div class="col-4 col-6-medium col-12-small">
 
 						<section>
-							<h2>How about some links?</h2>
+							<h2>인기검색순위</h2>
 							<div>
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<ul class="link-list">
-											<li><a href="#">Sed neque nisi consequat</a></li>
-											<li><a href="#">Dapibus sed mattis blandit</a></li>
-											<li><a href="#">Quis accumsan lorem</a></li>
-											<li><a href="#">Suspendisse varius ipsum</a></li>
-											<li><a href="#">Eget et amet consequat</a></li>
+											<li><a href="#">1위 A</a></li>
+											<li><a href="#">2위</a></li>
+											<li><a href="#">3위</a></li>
+											<li><a href="#">4위</a></li>
+											<li><a href="#">5위</a></li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-small">
 										<ul class="link-list">
-											<li><a href="#">Quis accumsan lorem</a></li>
-											<li><a href="#">Sed neque nisi consequat</a></li>
-											<li><a href="#">Eget et amet consequat</a></li>
-											<li><a href="#">Dapibus sed mattis blandit</a></li>
-											<li><a href="#">Vitae magna sed dolore</a></li>
+											<li><a href="#">6위 A</a></li>
+											<li><a href="#">7위</a></li>
+											<li><a href="#">8위</a></li>
+											<li><a href="#">9위</a></li>
+											<li><a href="#">10위</a></li>
 										</ul>
 									</div>
 								</div>
@@ -130,7 +133,7 @@
 					<div class="col-6 col-12-medium">
 
 						<section>
-							<h2>An assortment of pictures and text</h2>
+							<h2>커뮤니티</h2>
 							<p>Duis neque nisi, dapibus sed mattis quis, rutrum et
 								accumsan. Suspendisse nibh. Suspendisse vitae magna eget odio
 								amet mollis justo facilisis quis. Sed sagittis mauris amet
