--- a/WebContent/maxing/ranking.html
+++ b/WebContent/maxing/ranking.html
@@ -21,14 +21,15 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Minimaxing</a></h1>
-									<nav id="nav">
-										<a href="index.html">Homepage</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
-										<a href="threecolumn.html" class="current-page-item">Three Column</a>
-									</nav>
+									<h1><a href="index.html" id="logo">WebDongSaNy</a></h1>
+                                    <nav id="nav">
+                                        <a href="index.html">홈</a>
+                                        <a href="total_search.html">통합검색</a>
+                                        <a href="youtube_rcmd.html">유튜브 추천</a>
+                                        <a href="community.html">커뮤니티</a>
+                                        <a href="ranking.html" class="current-page-item">랭킹</a>
+                                        <a href="signin.jsp">로그인</a>
+                                    </nav>
 								</header>
 
 							</div>
