--- a/WebContent/maxing/community.html
+++ b/WebContent/maxing/community.html
@@ -45,7 +45,7 @@
 								<section>
 									<h2>커뮤니티</h2>
 									<ul class="link-list">
-										<li><a href="community">공지사항</a></li>
+										<li><a href="community.html">공지사항</a></li>
 										<li><a href="game.html">게임 게시판</a></li>
 										<li><a href="animal.html">동물 게시판</a></li>
 										<li><a href="joke.html">유머 게시판</a></li>
