--- a/WebContent/maxing/sport.html
+++ b/WebContent/maxing/sport.html
@@ -56,8 +56,8 @@
 							</div>
                             <div class="col-9 col-9-medium imp-medium">
                                 <section class="middle-content">
-									<h2>스포츠 게시판</h2>
-                                    <p>스포츠 관련 글을 올리는 게시판입니다.</p>
+									<h2>게임 게시판</h2>
+                                    <p>게임 관련 글을 올리는 게시판입니다.</p>
 								</section>
 						</div>
 					</div>
