--- a/WebContent/maxing/joke.html
+++ b/WebContent/maxing/joke.html
@@ -6,10 +6,12 @@
 -->
 <html>
 	<head>
-		<title>One Column - Minimaxing by HTML5 UP</title>
+		<title>WebDongSaNy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/custom.css"/>
+        <link rel="stylesheet" href="assets/css/bootstrap.css" />
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -22,7 +24,7 @@
 
 								<header id="header">
 									<h1><a href="index.html" id="logo">WebDongSaNy</a></h1>
-                                    <nav id="nav">
+                                    <nav id="nav" class="navber-brand">
                                         <a href="index.html">홈</a>
                                         <a href="total_search.html">통합검색</a>
                                         <a href="youtube_rcmd.html">유튜브 추천</a>
