--- a/WebContent/maxing/total_search.html
+++ b/WebContent/maxing/total_search.html
@@ -9,7 +9,9 @@
 		<title>Two Column 1 - Minimaxing by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/custom.css"/>
+        <link rel="stylesheet" href="assets/css/bootstrap.css" />
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -22,7 +24,7 @@
 
 								<header id="header">
 									<h1><a href="index.html" id="logo">WebDongSaNy</a></h1>
-									<nav id="nav">
+									<nav id="nav" class="navbar-brand">
                                         <a href="index.html">홈</a>
                                         <a href="total_search.html" class="current-page-item">통합검색</a>
                                         <a href="youtube_rcmd.html">유튜브 추천</a>
