--- a/WebContent/maxing/board_write.html
+++ b/WebContent/maxing/board_write.html
@@ -5,123 +5,132 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>WebDongSaNy</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="stylesheet" href="assets/css/custom.css"/>
-        <link rel="stylesheet" href="assets/css/bootstrap.css" />
-	</head>
-	<body>
-		<div id="page-wrapper">
+<head>
+<title>WebDongSaNy</title>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="assets/css/main.css" />
+<link rel="stylesheet" href="assets/css/custom.css" />
+<link rel="stylesheet" href="assets/css/bootstrap.css" />
+</head>
+<body>
+	<div id="page-wrapper">
 
-			<!-- Header -->
-				<div id="header-wrapper">
-					<div class="container">
-						<div class="row">
-							<div class="col-12">
+		<!-- Header -->
+		<div id="header-wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
 
-								<header id="header">
-									<h1><a href="index.html" id="logo">WebDongSaNy</a></h1>
-                                    <nav id="nav" class="navbar-brand">
-                                        <a href="index.html">홈</a>
-                                        <a href="total_search.html">통합검색</a>
-                                        <a href="youtube_rcmd.html">유튜브 추천</a>
-                                        <a href="community.html" class="current-page-item">커뮤니티</a>
-                                        <a href="ranking.html">랭킹</a>
-                                        <a href="signin.jsp">로그인</a>
-                                    </nav>
-								</header>
-							</div>
-						</div>
+						<header id="header">
+							<h1>
+								<a href="index.html" id="logo">WebDongSaNy</a>
+							</h1>
+							<nav id="nav" class="navbar-brand">
+								<a href="index.html">홈</a> <a href="total_search.html">통합검색</a>
+								<a href="youtube_rcmd.html">유튜브 추천</a> <a href="community.html"
+									class="current-page-item">커뮤니티</a> <a href="ranking.html">랭킹</a>
+								<a href="signin.jsp">로그인</a>
+							</nav>
+						</header>
 					</div>
 				</div>
-
-			<!-- Main -->
-				<div id="main">
-					<div class="container">
-						<div class="row main-row">
-							<div class="col-2 col-12-medium">
-
-								<section>
-									<h2>커뮤니티</h2>
-									<ul class="link-list">
-										<li><a href="community.html">공지사항</a></li>
-										<li><a href="game.html">게임 게시판</a></li>
-										<li><a href="animal.html">동물 게시판</a></li>
-										<li><a href="joke.html">유머 게시판</a></li>
-										<li><a href="sport.html">스포츠 게시판</a></li>
-										<li><a href="public.html">자유 게시판</a></li>
-									</ul>
-								</section>
-							</div>
-                            <div class="col-10 col-9-medium imp-medium container">
-                                <section class="middle-content">
-									<h2>글 쓰기</h2>
-								</section>
-                                <table>
-                                    <form name="BoardWriteForm" method="post" action="Board_Write_action.jsp" onsubmit="return boardWriteCheck();" >
-                                        <colgroup>
-                                            <col width="20%">
-                                            <col width="80%">
-                                        </colgroup>
-                                        <table class="table">
-                                            <tr>
-                                                <td>작성자</td>
-                                                <td><input type="text" name=name size=10 maxlength=10></td>
-                                            </tr>
-                                            <tr>
-                                                <td>제 목</td>
-                                                <td><input type="text" name=title size=25 maxlength=30></td>
-                                            </tr>
-                                            <tr>
-                                                <td>내 용</td>
-                                                <td><textarea type="content" rows="16" cols="100"></textarea></td>
-                                            </tr>
-                                            <tr>
-                                                <td>비밀번호</td>
-                                                <td><input type="password" name=password size=12 maxlength=20></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="2"><div align="center">
-                                                    <input type="submit" value="등록">&nbsp;&nbsp;
-                                                    <input type="button" value="뒤로" onclick="goUrl('community.html');"></div>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </form>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-				</div>
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div class="container">
-						<div class="row">
-							<div class="col-12">
-
-								<div id="copyright">
-									&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
-								</div>
-
-							</div>
-						</div>
-					</div>
-				</div>
-
+			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-            <script src="assets/js/jquery-3.1.1.js"></script>
-            <script src="assets/js/bootstrap.js"></script>
-            <script type="text/javascript">
+		<!-- Main -->
+		<div id="main">
+			<div class="container">
+				<div class="row main-row">
+					<div class="col-2 col-12-medium">
+
+						<section>
+							<h2>커뮤니티</h2>
+							<ul class="link-list">
+								<li><a href="community.html">공지사항</a></li>
+								<li><a href="game.html">게임 게시판</a></li>
+								<li><a href="animal.html">동물 게시판</a></li>
+								<li><a href="joke.html">유머 게시판</a></li>
+								<li><a href="sport.html">스포츠 게시판</a></li>
+								<li><a href="public.html">자유 게시판</a></li>
+							</ul>
+						</section>
+					</div>
+					<div class="col-10 col-9-medium imp-medium container">
+						<section class="middle-content">
+							<h2>글 쓰기</h2>
+						</section>
+						<table>
+							<form name="BoardWriteForm" method="post"
+								action="Board_Write_action.jsp"
+								onsubmit="return boardWriteCheck();">
+								<colgroup>
+									<col width="20%">
+									<col width="80%">
+								</colgroup>
+								<div class="container">
+									<div class="row">
+										<form method="post" action="writeAction.jsp">
+											<table class="table table-striped"
+												style="text-align: center; border: 1px solid #dddddd">
+												<thead>
+													<tr>
+														<th colspan="2"
+															style="background-color: #eeeeee; text-align: center;">게시판
+															글쓰기 양식</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td><input type="text" class="form-control"
+															placeholder="글 제목" name="bbsTitle" maxlength="50"></td>
+													</tr>
+													<tr>
+														<td><textarea class="form-control" placeholder="글 내용"
+																name="bbsContent" maxlength="2048"
+																style="height: 350px;"></textarea></td>
+													</tr>
+												</tbody>
+											</table>
+											<input type="submit" class="btn btn-primary pull-right"
+												value="글쓰기">
+										</form>
+									</div>
+								</div>
+							</form>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Footer -->
+		<div id="footer-wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+
+						<div id="copyright">
+							&copy; Untitled. All rights reserved. | Design: <a
+								href="http://html5up.net">HTML5 UP</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery-3.1.1.js"></script>
+	<script src="assets/js/bootstrap.js"></script>
+	<script type="text/javascript">
                 function goUrl(url){
                     location.href=url;
                 }
@@ -131,5 +140,5 @@
                 }
             </script>
 
-	</body>
+</body>
 </html>
